# peridio-rust

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-test.yml
certificates/: admin-api.pem  peridio.pem
examples/: comprehensive_logging.rs  debug_logging.rs
src/: lib.rs  list_params.rs  validators.rs
src/api/: artifact_versions.rs  artifacts.rs  binaries.rs  binary_parts.rs  binary_signatures.rs  bundle_overrides.rs  bundle_signatures.rs  bundles.rs  ca_certificates.rs  cohorts.rs  deployments.rs  device_certificates.rs  devices.rs  error.rs  events.rs  firmwares.rs  mod.rs  organization_users.rs  product_users.rs  products.rs  products_v2.rs  releases.rs  signature_common.rs  signing_keys.rs  tunnels.rs  users.rs  webhooks.rs
tests/: artifact_versions.rs  artifacts.rs  binaries.rs  binary_signatures.rs  bundle_overrides.rs  bundle_signatures.rs  bundles.rs  ca_certificates.rs  cohorts.rs  common.rs  deployments.rs  device_certificates.rs  devices.rs  firmwares.rs  logging_test.rs  organization_users.rs  product_users.rs  products.rs  products_v2.rs  releases.rs  signing_keys.rs  tunnels.rs  unauthenticated.rs  users.rs  webhooks.rs
tests/fixtures/: 403.json  422.json  artifact-versions-create-201.json  artifact-versions-get-200.json  artifact-versions-update-200.json  artifacts-create-201.json  artifacts-get-200.json  artifacts-update-200.json  binaries-create-201.json  binaries-download-url-200.json  binaries-get-200.json  binaries-update-200.json  binary-signatures-create-201.json  binary-signatures-create-both-201.json  binary-signatures-create-keyid-201.json  binary-signatures-create-neither-201.json  binary-signatures-list-200.json  bundle-overrides-add-device-201.json  bundle-overrides-get-200.json  bundle-overrides-list-200.json  bundle-overrides-list-devices-200.json  bundle-overrides-update-200.json  bundle-signatures-create-201.json  bundle-signatures-create-both-201.json  bundle-signatures-create-keyid-201.json  bundle-signatures-create-neither-201.json  bundle-signatures-list-200.json  bundles-create-201.json  bundles-get-200.json  bundles-update-200.json  bundles-v2-create-201.json  bundles-v2-update-200.json  (+45 more)
