[package]
name = "peridio-sdk"
description = "Peridio SDK"
homepage = "https://peridio.com"
repository = "https://github.com/peridio/reishi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.20.0", features = ["fs", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8"
validator = { version = "0.18", features = ["derive"] }


[dev-dependencies]
mockito = "1.5"
