[package]
name = "peridio-sdk"
description = "Peridio SDK"
homepage = "https://peridio.com"
repository = "https://github.com/peridio/reishi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.39.3", features = ["fs", "macros"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tower = { version = "0.5.0" }
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
snafu = "0.8.4"
validator = { version = "0.18.1", features = ["derive"] }


[dev-dependencies]
mockito = "0.31"
